# AdventOfCode-2021

./: Cargo.toml  README.md
DAY01/: Cargo.toml
DAY01/src/: main.rs
benches/: advent-2021.rs
common/src/: lib.rs
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day13/: Cargo.toml
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/src/: lib.rs  main.rs
day17/: Cargo.toml
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: lib.rs  main.rs
day19/: Cargo.toml
day19/src/: lib.rs  main.rs
day20/: Cargo.toml
day20/src/: lib.rs  main.rs
day21/: Cargo.toml
day21/src/: lib.rs  main.rs
day22/: Cargo.toml
day22/src/: cuboidunion.rs  lib.rs  main.rs  modification.rs  utils.rs
day23/: Cargo.toml
day23/src/: lib.rs  main.rs
day24/: Cargo.toml
day24/src/: lib.rs  main.rs
day25/: Cargo.toml
day25/src/: lib.rs  main.rs
src/: main.rs
templating/: today.sh
templating/dayZZ/: Cargo.toml
(+2 files in other folders)
