[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bench]]
name = "advent-2021"
harness = false

[dependencies]
criterion = "*"

[dependencies.day01]
path = "day01"

[dependencies.day02]
path = "day02"

[dependencies.day03]
path = "day03"

[dependencies.day04]
path = "day04"

[dependencies.day05]
path = "day05"

[dependencies.common]
path = "common"

[dependencies.day06]
path="day06/"

[dependencies.day07]
path = "day07"

[dependencies.day08]
path = "day08"

[dependencies.day09]
path = "day09"

[dependencies.day10]
path = "day10"

[dependencies.day11]
path = "day11"

[dependencies.day12]
path = "day12"

[dependencies.day13]
path = "day13"

[dependencies.day14]
path = "day14"

[dependencies.day15]
path = "day15"

[dependencies.day16]
path = "day16"

[dependencies.day17]
path = "day17"

[dependencies.day18]
path = "day18"

[dependencies.day19]
path = "day19"

[dependencies.day20]
path = "day20"
